@@ -16,6 +16,7 @@ Changelog
     - [Bugfix] Link to the documentation of the debug preset does not work anymore in the documentation.
     - [Bugfix] Added the missing path filter to the EXT: path resolver.
     - [Bugfix] Added the missing path filter to the real path resolver.
+    - [Bugfix] Use strict encoding detection for strings for more reliable results.
 
 4.1.5
     - [Feature] Aimeos 2022 support
